add parse categoryList

--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
                                 </li>
                                 <li class="add-movie__form-item">
                                     <select id="movieCategory" class="movie-category ">
-                                        <option value="" disabled selected hidden>Category</option>
-                                        <option value="0">Horror</option>
+                                        <!-- <option value="" >Categordsfsdfsdfy</option> -->
+                                        <!-- <option value="0">Horror</option>
                                         <option value="1">Drama</option>
                                         <option value="2">Comedy</option>
                                         <option value="3">Melodrama</option>
                                         <option value="4">Action</option>
-                                        <option value="5">Thriller</option>
+                                        <option value="5">Thriller</option> -->
                                     </select>
+                                    <button type="button" class="addBtn"></button>
                                 </li>
                                 <li class="add-movie__form-item">
                                     <select id="movieCountry" class="movie-country">
