--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
                                         placeholder="Year of production">
                                 </li>
                                 <li class="add-movie__form-item">
-                                    <select id="movieCategory" class="movie-category ">
-                                        <!-- <option value="" >Categordsfsdfsdfy</option> -->
-                                        <!-- <option value="0">Horror</option>
-                                        <option value="1">Drama</option>
-                                        <option value="2">Comedy</option>
-                                        <option value="3">Melodrama</option>
-                                        <option value="4">Action</option>
-                                        <option value="5">Thriller</option> -->
-                                    </select>
-                                    <button type="button" class="addBtn"></button>
+                                    <div class="add-movie__form-item--wrapper">
+                                        <select id="movieCategory" class="movie-category "></select>
+                                        <input id="newCategory" class="new-item new-item--width0" type="text" placeholder="New category">
+                                    </div>
+                                    <button id="newCategoryBtn" type="button" class="addBtn"></button>
                                 </li>
                                 <li class="add-movie__form-item">
-                                    <select id="movieCountry" class="movie-country">
-                                        <option value="" disabled selected hidden>Country</option>
-                                        <option value="0">Россия</option>
-                                        <option value="1">США</option>
-                                        <option value="2">Великобритания</option>
-                                        <option value="3">Ирландия</option>
-                                        <option value="4">Нижерланды</option>
-                                    </select>
+                                    <div class="add-movie__form-item--wrapper">
+                                        <select id="movieCountry" class="movie-country"></select>
+                                        <input id="newCountry" class="new-item new-item--width0" type="text" placeholder="New category">
+                                    </div>
+                                    <button id="newcountryBtn" type="button" class="addBtn"></button>
+
+                                    <!-- <option value="" disabled selected hidden>Country</option>
+                                    <option value="0">Россия</option>
+                                    <option value="1">США</option>
+                                    <option value="2">Великобритания</option>
+                                    <option value="3">Ирландия</option>
+                                    <option value="4">Нижерланды</option> -->
+
                                 </li>
                                 <li class="add-movie__form-item">
                                     <input id="confirmBtn" class="confirm-btn" type="button" value="Add">
