add movieList block

--- a/index.html
+++ b/index.html
@@ -41,24 +41,16 @@
                                 <li class="add-movie__form-item">
                                     <div class="add-movie__form-item--wrapper">
                                         <select id="movieCategory" class="movie-category "></select>
-                                        <input id="newCategory" class="new-item new-item--width0" type="text" placeholder="New category">
+                                        <input id="newCategory" class="new-item new-item--height0" type="text" placeholder="New category">
                                     </div>
                                     <button id="newCategoryBtn" type="button" class="addBtn"></button>
                                 </li>
                                 <li class="add-movie__form-item">
                                     <div class="add-movie__form-item--wrapper">
                                         <select id="movieCountry" class="movie-country"></select>
-                                        <input id="newCountry" class="new-item new-item--width0" type="text" placeholder="New category">
+                                        <input id="newCountry" class="new-item new-item--height0" type="text" placeholder="New country">
                                     </div>
-                                    <button id="newcountryBtn" type="button" class="addBtn"></button>
-
-                                    <!-- <option value="" disabled selected hidden>Country</option>
-                                    <option value="0">Россия</option>
-                                    <option value="1">США</option>
-                                    <option value="2">Великобритания</option>
-                                    <option value="3">Ирландия</option>
-                                    <option value="4">Нижерланды</option> -->
-
+                                    <button id="newCountryBtn" type="button" class="addBtn"></button>
                                 </li>
                                 <li class="add-movie__form-item">
                                     <input id="confirmBtn" class="confirm-btn" type="button" value="Add">
@@ -69,55 +61,35 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="movie-list block">
-                        <div class="movie-item">
-                            <button id="movieWatcedBtn" class="movie-item__watched-btn movie-item__watched-btn--active"></button>
+                    <div id="movieListBlock" class="movie-list block">
+
+
+                        <!-- <div class="movie-item">
+                            <button id="movieWatcedBtn" class="movie-item__watched-btn"></button>
                             <div class="movie-item__desc">
-                                <div id="movieItemTitle" class="movie-item__title">Название фильма</div>
+                                <div class="movie-item__title">Название фильма</div>
                                 <div class="movie-item__additional-features">
-                                    <span id="movieItemYear" class="movie-item__year">2022</span>
-                                    <span id="movieItemDirector" class="movie-item__director">Джеймс Кэмерон</span>
-                                    <span id="movieItemCategory" class="movie-item__category">Мелодрамма</span>
+                                    <span>2022</span>
+                                    <span>Россия</span>
+                                    <span>Мелодрамма</span>
                                 </div>
                             </div>
                             <button id="movieItemDelete" class="movie-item__delete-btn"></button>
-                        </div>
-                        <div class="movie-item">
-                            <button class="movie-item__watched-btn "></button>
+                        </div> -->
+
+                        <!-- <div class="movie-item">
+                            <button id="movieWatcedBtn" class="movie-item__watched-btn"></button>
                             <div class="movie-item__desc">
-                                <div class="movie-item__title">Название фильма</div>
+                                <div id="movieItemTitle" class="movie-item__title">Название фильма</div>
                                 <div class="movie-item__additional-features">
-                                    <span class="movie-item__year">2022</span>
-                                    <span class="movie-item__director">Джеймс Кэмерон</span>
-                                    <span class="movie-item__category">Мелодрамма</span>
+                                    <span id="movieItemYear" >2022</span>
+                                    <span id="movieItemCountry" >Россия</span>
+                                    <span id="movieItemCategory" >Мелодрамма</span>
                                 </div>
                             </div>
-                            <button class="movie-item__delete-btn"></button>
-                        </div>
-                        <div class="movie-item">
-                            <button class="movie-item__watched-btn "></button>
-                            <div class="movie-item__desc">
-                                <div class="movie-item__title">Название фильма</div>
-                                <div class="movie-item__additional-features">
-                                    <span class="movie-item__year">2022</span>
-                                    <span class="movie-item__director">Джеймс Кэмерон</span>
-                                    <span class="movie-item__category">Мелодрамма</span>
-                                </div>
-                            </div>
-                            <button class="movie-item__delete-btn"></button>
-                        </div>
-                        <div class="movie-item">
-                            <button class="movie-item__watched-btn "></button>
-                            <div class="movie-item__desc">
-                                <div class="movie-item__title">Название фильма</div>
-                                <div class="movie-item__additional-features">
-                                    <span class="movie-item__year">2022</span>
-                                    <span class="movie-item__director">Джеймс Кэмерон</span>
-                                    <span class="movie-item__category">Мелодрамма</span>
-                                </div>
-                            </div>
-                            <button class="movie-item__delete-btn"></button>
-                        </div>
+                            <button id="movieItemDelete" class="movie-item__delete-btn"></button>
+                        </div> -->
+                      
                     </div>
                 </section>
             </div>
