--- a/index.html
+++ b/index.html
@@ -61,36 +61,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="movieListBlock" class="movie-list block">
-
-
-                        <!-- <div class="movie-item">
-                            <button id="movieWatcedBtn" class="movie-item__watched-btn"></button>
-                            <div class="movie-item__desc">
-                                <div class="movie-item__title">Название фильма</div>
-                                <div class="movie-item__additional-features">
-                                    <span>2022</span>
-                                    <span>Россия</span>
-                                    <span>Мелодрамма</span>
-                                </div>
-                            </div>
-                            <button id="movieItemDelete" class="movie-item__delete-btn"></button>
-                        </div> -->
-
-                        <!-- <div class="movie-item">
-                            <button id="movieWatcedBtn" class="movie-item__watched-btn"></button>
-                            <div class="movie-item__desc">
-                                <div id="movieItemTitle" class="movie-item__title">Название фильма</div>
-                                <div class="movie-item__additional-features">
-                                    <span id="movieItemYear" >2022</span>
-                                    <span id="movieItemCountry" >Россия</span>
-                                    <span id="movieItemCategory" >Мелодрамма</span>
-                                </div>
-                            </div>
-                            <button id="movieItemDelete" class="movie-item__delete-btn"></button>
-                        </div> -->
-                      
-                    </div>
+                    <div id="movieListBlock" class="movie-list block"></div>
                 </section>
             </div>
         </div>
