--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="add-movie__inner">
                             <div class="add-movie-btn--wrapper">
                                 <button id="addMovieBtn" class="add-movie-btn">Add movie</button>
-                                <button id="cancelAddMovieBtn" class="cancel-add-movie-btn"></button>
+                                <button id="cancelAddMovieBtn" class="cancel-add-movie-btn display-none"></button>
                             </div>
                             <ul id="addMovieForm" class="add-movie__form display-none"> 
                                 <li class="add-movie__form-item">
